- Fixed the player and map lists in the GUI not updating
- Fixed color code exploits which crash clients
- Fixed GUI so if a box is left empty in the create level (not including seed) it no longer crashes
- Completey remade the IRC bot, it now uses a different DLL (no more virus alert :D)
- /resetbot no longer nukes the server console
- Made it so autoload.txt doesn't save when load on /goto is enabled
- Made some changes to the right-click menu for the maps box
- Made a change to the window title, it looks much more professional
- Made it so you can now have different prices for ranks in the Economy
- Made it so plugins are loaded last, this fixes a problem with accessing levels in plugins
- Made changes to some events (Might break old plugins)
- Improved the tree generator, the trunk now makes more sense
- Improved water/lava physics, they now have random flow. You can go back to the old physics with /map randomflow
- Added Plugin.Events.CancelEvent()
- Added tree growing! Use /map growtrees to turn it on, place a sapling and wait a while
- Added leaf decay! Use /map leafdecay to turn it on, requires physics
- Added missing stuff to the "Maps" tab
- Added seed option to /newlvl, check /help newlvl for more information
- Added a "Games" tab to the properties window, it's for game mode configuration
- Added server port and NickServ identify to the IRC/SQL settings tab
- Moved Zombie Survival options into the "Games" tab
- Removed the duplicate "death count" option
= 

v5.1.0.3
- Fixed level saving!

v5.1.0.2
- Fixed the bug that pretty much broke physics
- Fixed a bug with grass growing on physics 0 and 5
- Fixed the error that happens when a new user joins the server

v5.1.0.1
- Hopefully fixed the error-when-a-new-person-joins bug...
- Fixed the check for updates option
- Fixed AFK kick!!