@@ -482,6 +482,10 @@ namespace MCForge
                                 try { Server.mutespamtime = int.Parse(value); }
                                 catch { Server.s.Log("Invalid " + key + ". Using default"); }
                                 break;
+                            case "show-empty-ranks":
+                                try { Server.showEmptyRanks = bool.Parse(value); }
+                                catch { Server.s.Log("Invalid " + key + ". Using default"); }
+                                break;
 
                         }
                     }
@@ -693,6 +697,9 @@ namespace MCForge
             w.WriteLine("mute-on-spam = " + Server.checkspam.ToString().ToLower());
             w.WriteLine("spam-messages = " + Server.spamcounter.ToString());
             w.WriteLine("spam-mute-time = " + Server.mutespamtime.ToString());
+            w.WriteLine();
+            w.WriteLine("#Show Empty Ranks in /players");
+            w.WriteLine("show-empty-ranks = " + Server.showEmptyRanks.ToString().ToLower());
         }
     }
 }
